# GD32-LCDwatch

./: .gitignore  README.md  soul.md
doc/: firmware_build.md  flashing.md  lcd-watch.md  setup.md  tutorial.md
firmware/: CMakeLists.txt
firmware/cmake/: arm-none-eabi-gcc.cmake
firmware/include/: board.h  gd32f30x_libopt.h  main.h  spi.h  stdint.h  systick.h
firmware/ld/: GD32F303RCT6.ld
firmware/sdk/lcd/: tftlcd.c  tftlcd.h
firmware/src/: board.c  gd32f30x_it.c  lcd_spi.c  main.c  systick.c
firmware/startup/: startup_gd32f30x_hd_gcc.S
